<package>

  <name>compliance_controllers</name>
  <version>0.0.1</version>

  <description>Impedance controllers written for the IRB4400 robot.</description>
  <author email="marcus.adam.johansson@gmail.com">Marcus A Johansson</author>
  <maintainer email="marcus.adam.johansson@gmail.com">Marcus A Johansson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>compliance_controllers_msgs_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>

</package>
